fix navbar brand jumping on window resize

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,2 +1,10 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
+
+@media (max-width: 979px) {
+
+  .navbar .brand {
+    margin-top: -25px;
+    margin-left: -20px;
+  }
+}
